test2-2023-09-09.log
regress/test2.fir:247424:17: error: use of unknown declaration 'validif'
    tmp20070 <= validif(head(UInt<3>(6), 1), SInt<24>("b-11111101000010001010101"))
                ^
===-------------------------------------------------------------------------===
                         ... Execution time report ...
===-------------------------------------------------------------------------===
  Total Execution Time: 1.0811 seconds

  ----Wall Time----  ----Name----
    1.0748 ( 99.4%)  FIR Parser
    0.0000 (  0.0%)    Parse annotations
    0.0000 (  0.0%)    Parse OMIR
    1.0137 ( 93.8%)    Parse modules
    0.0063 (  0.6%)  Rest
    1.0811 (100.0%)  Total

{
  totalTime: 1.093,
  maxMemory: 168443904
}
